--- a/tarea1/index.html
+++ b/tarea1/index.html
@@ -17,5 +17,33 @@
         <p>html</p>
         <p>css</p>
     </div>
+
+    <h1 class="centrado">Módulos de 1º DAM</h1>
+    <table class="tabla centrado">
+        <tr>
+            <th>Nombre Del Módulo</th>
+            <th>Horas Semanales</th>
+        </tr>
+        <tr>
+            <td>programación</td>
+            <td>8</td>
+        </tr>
+        <tr>
+            <td>Bases de datos</td>
+            <td>8</td>
+        </tr>
+        <tr>
+            <td>Entornos de desarrollo</td>
+            <td>8</td>
+        </tr>
+        <tr>
+            <td>Sistemas Informáticos</td>
+            <td>8</td>
+        </tr>
+        <tr>
+            <td>Lenguaje de Marcas</td>
+            <td>8</td>
+        </tr>
+    </table>
 </body>
 </html>
